syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    CurrencyPositionRecords are live risk records that contain start-of-day positions and all subsequent transactions.
    These records are published by a CoreRiskServer and represent the position and risk markup detail for a single currency.
    New records are published immediately when a position changes and about once per minute if no position has changed.
*/    
message CurrencyPositionRecordV5 {
    message PKey {
        
        Currency currency = 10;
        string accnt = 11;
        DateKey trade_date = 12;
        string client_firm = 13; // SR assigned client firm
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    int32 mny_opn_pos_prv = 106; // start-of-day SR currency position (rotated from prior day record)
    int32 mny_opn_pos_clr = 109; // start-of-day CLR currency position (supplied by client/clearing firm via clearing position load)
    int32 mny_opn_pos = 112; // start of period currency position (effective; can be from either CLR or SR)
    PositionSource mny_opn_pos_src = 115; // start of period position source
    int32 mny_bot = 118; // currency units bot today
    int32 mny_sld = 121; // currency units sld today
    int32 num_executions = 124; // number of currency transactions included in mnyBot and mnySld today
    google.protobuf.Timestamp max_exec_dttm = 127; // max (timestamp) of included currency transaction records
    google.protobuf.Timestamp timestamp = 130;
}


